examples/basic/invalid/invalid_syntax_2.scm
; Erro sintático: parêntese aberto sem fechamento (EOF inesperado)
(define (soma x y)
  (+ x y)
